[package]
name = "accelerator"
version = "0.1.0"
authors = ["tuxzz <dorazzsoft@gmail.com>"]
edition = "2018"

[lib]
name = "revoice_accelerator"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.7"
num-complex = "0.2"
num-traits = "0.2"
rayon = "1.2"
rand = "0.7"
fastapprox = "0.3"

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]

[dependencies.fftw]
version = "0.6"
default-features = false
features = ["source"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false